--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2
 jobs:
     build:
+        docker:
+            - image: buildpack-deps:trusty
         working_directory: ~/node
         environment:
             IMAGE_NAME: ramtek/splendy
