--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,13 @@ jobs:
         steps:
             - checkout
             - run:
+                name: Add environment file
+                command: |
+                    touch .env
+                    echo "MONGO_USER=$MONGO_USER" >> .env
+                    echo "MONGO_PASS=$MONGO_PASS" >> .env
+                    echo "MONGO_DB=$MONGO_DB" >> .env
+            - run:
                 name: Build Docker image
                 command: docker build -t $IMAGE_NAME:latest .
             - run:
