--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.3",
     "web-push": "^3.4.3",
-    "ws": "^7.2.1"
+    "ws": "^7.2.1",
+    "minimist": ">=1.2.3"
   }
 }
